    + L'affichage de l'humidité sur un mois fonctionne à nouveau
    + Modification de l'affichage de la légende pour les logs: 2 colonnes + on n'affiche plus les légendes des capteurs sans données
    + Découpage jour par jour par le calcul du cout pour éviter les timeout
    + Regroupement des deux boites de messages avertissement et information en une seule

-- Yann Genevois <yann.genevois@gmail.com>  Wed Jun  5 13:33:21 CEST 2013


Cultibox (1.1.22) precise; urgency=low
    + Correction des accents dans le graphe de coût pour Mac OS X
    + Correction du numéro de version dans les paquets windows
    + Gestion des caractères spéciaux dans le calendrier pour les requettes SQL
    + Correction d'une erreur sur la création d'évènements multiples

-- Yann Genevois <yann.genevois@gmail.com>  Wed May 22 10:11:33 CEST 2013


Cultibox (1.1.21) precise; urgency=low
    + Changement de la couleur de selection des jours dans le calendrier
    + Suppréssion des bandes de couleurs dans les programmes
    + Un seul méssage pour l'affichage des logs concernant les températures et humidités vides

-- Yann Genevois <yann.genevois@gmail.com>  Sun May 19 18:50:39 CEST 2013


Cultibox (1.1.20) precise; urgency=low
    + Ajout de tooltip pour la partie cyclique
    + Ajout d'une pop up si deux programmes succéssifs ont les même heures
    + Passage a highchart 3.0.1 pour corriger des problèmes d'affichage
    + Passage des input disabled en label avec la classe readonly
    + Correction de l'affichage des logs par mois dans la fonction check_format_date
    + Ajout de la possibilité de créer un icône cultibox sur le bureau pour windows
    + Correction des zooms sur l'affichage des logs
    + Mise en place d'un temps d'attente après chaque action du calendrier si une carte SD est détectée grâce à la librairie blockUI
    + Changement des couleurs pour le calendrier lunaire
    + Agrandissement de la taille du datepicker et du timepicker